kuberman/dvna_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dvna-deployment
  labels:
    name: dvna-deployment
    app: dvna-app
spec:
  replicas: 2
  selector:
    matchLabels:
      name: dvna-pod
      app: dvna-app
  template:
    metadata:
      name: dvna-pod
      labels:
        name: dvna-pod
        app: dvna-app
    spec:
      containers:
      - image: t0nydocker/dvna:1.0
        name: dvna-container
