kuberman/db_netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysqlblocker
  namespace: dvnahashi
spec:
  podSelector:
    matchLabels:
      name: mysql-pod
      app: dvna-app
  policyTypes:
  - Ingress
